--- a/data/rush/16175.yaml
+++ b/data/rush/16175.yaml
@@ -7,7 +7,7 @@ name:
   it: Spada e Scudo
   pt:
   ja: <ruby>左<rt>ひだり</rt></ruby><ruby>手<rt>て</rt></ruby>に<ruby>剣<rt>けん</rt></ruby>を<ruby>右<rt>みぎ</rt></ruby><ruby>手<rt>て</rt></ruby>に<ruby>盾<rt>たて</rt></ruby>を
-  ja_romaji: Hidarite ni Ken wo Migite ni Tate wo
+  ja_romaji: Hidarite ni Ken o Migite ni Tate o
   ko: 왼손엔 검 오른손엔 방패
   ko_rr:
   zh-TW:
