--- a/data/rush/16658.yaml
+++ b/data/rush/16658.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An angel that's totally bringing the bling in the modern style. Nobody be stoppin' him, man.
+    An angel living it up in the present progressive tense. No one can stop this maaan.
   de:
   es:
   fr:
@@ -50,7 +50,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716908
