--- a/data/rush/16659.yaml
+++ b/data/rush/16659.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A newbie drone that continues to update through trial and error. It operates on a frantic pace.
+    A western drone that continues to update itself through trial & error. Frantically on the clock.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 711460
