--- a/data/rush/16662.yaml
+++ b/data/rush/16662.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Half man and half horse, this monster is known for its extreme dine and dashing.
+    A horse kind of man. No one can catch up to his gorging speed.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715976
