--- a/data/rush/16663.yaml
+++ b/data/rush/16663.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An air marmot that has a nefarious dipping sauce and dish. It attacks by throwing around steak-cut rankings.
+    A beaver with the fiend's sauce and plate. It attacks by shoving the top ranked meat list down your throat.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713047
