--- a/data/rush/16680.yaml
+++ b/data/rush/16680.yaml
@@ -1,6 +1,6 @@
 konami_id: 16680
 name:
-  en: Worker Warrior - Syndicate Security
+  en: Secret Service Shine Guard
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card, pay 600 LP.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, pay 600 LP.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Business Card Barrage" and/or 1 "Nutrient Zero" from your Graveyard in your Spell & Trap Zone. This turn, you can only attack with Machine Type monsters.
+    Set 1 "Business Card Barrage" and/or 1 "Nutrient Zero" from your Graveyard in your Spell & Trap Zone. You can only attack with Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Worker Warrior
 images:
 - index: 1
-  image: WorkerWarriorSyndicateSecurity-RDKP06-JP-C.png
+  image: SecretServiceShineGuard-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP023
@@ -62,9 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717519
