--- a/data/rush/16761.yaml
+++ b/data/rush/16761.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An invincible fist that can shatter even mountains. Yearning for the battle flag to be raised. There is no defeat in the strongest battle.
+    Beholder of an invincible fist that could split a mountain. The flaring battle flag burns within its chest. Defeat does not exist in the Ultimate.
   de:
   es:
   fr:
@@ -68,9 +68,4 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717301
