--- a/data/rush/16771.yaml
+++ b/data/rush/16771.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A magician with a pure mind that's beyond reproach. His unclouded eyes were supposed to always see the way to the path of reason, but at some point he began hiding them behind a mask.
+    A magician who inhabits a pure and innocent soul. Those clear eyes were said to see all reason, but as time passed, he began to hide them behind a mask.
   de:
   es:
   fr:
@@ -54,7 +54,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 712993
