--- a/data/rush/16775.yaml
+++ b/data/rush/16775.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A dragon whelp of the four great Element Dragons, it commands the winds. It manipulates the atmosphere as it desires, using this power to protect the land.
+    An infant Dragon of the four elemental dragons. Protects the land by manipulating the atmosphere at will.
   de:
   es:
   fr:
@@ -50,7 +50,4 @@ sets:
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716975
