--- a/data/cards/52097679.yaml
+++ b/data/cards/52097679.yaml
@@ -8,7 +8,7 @@ name:
   it: Scudo e Spada
   pt: Escudo & Espada
   ja: <ruby>右<rt>みぎ</rt></ruby><ruby>手<rt>て</rt></ruby>に<ruby>盾<rt>たて</rt></ruby>を<ruby>左<rt>ひだり</rt></ruby><ruby>手<rt>て</rt></ruby>に<ruby>剣<rt>けん</rt></ruby>を
-  ja_romaji: Migite ni Tate wo Hidarite ni Ken wo
+  ja_romaji: Migite ni Tate o Hidarite ni Ken o
   ko: 오른손엔 방패 왼손엔 검
   ko_rr:
   zh-TW:
