--- a/data/rush/16666.yaml
+++ b/data/rush/16666.yaml
@@ -1,6 +1,6 @@
 konami_id: 16666
 name:
-  en: Grilled Pangolin
+  en: Pangoflame
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A creature dwelling in a caldera, living at its own pace. While it remains calm, the flames covering its body cause everything around it to catch fire, turning the surrounding area into a sea of flames.
+    A free-spirited creature inhabiting an eruptive crater. The flames from its body can ignite a sea of fire, but it is not bothered by mere infernal walls.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: GrilledPangolin-RDKP06-JP-C.png
+  image: Pangoflame-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP009
@@ -46,9 +46,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715200
