--- a/data/rush/16668.yaml
+++ b/data/rush/16668.yaml
@@ -1,6 +1,6 @@
 konami_id: 16668
 name:
-  en: Northern Gyoza Girl
+  en: Northern Dumplina
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The poster girl for a Northern Chinese restaurant who advocates for labor reforms. Many corporate warriors leave the office at the end of their shifts and come here to eat, but by that time, she's already gone home.
+    The poster-girl for a restaurant up North, an advocate for more work-life balance. Numerous corporate soldiers leave work on time to swing by, but she herself had also left on time.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 900
 def: 1700
 images:
 - index: 1
-  image: NorthernGyozaGirl-RDKP06-JP-C.png
+  image: NorthernDumplina-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP011
@@ -46,9 +46,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716060
