--- a/data/rush/16669.yaml
+++ b/data/rush/16669.yaml
@@ -1,6 +1,6 @@
 konami_id: 16669
 name:
-  en: Whirlwind Phantom Beast Pazuzu
+  en: Fazuzu the King of Mythical Wind Beasts
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A mythical beast with four wings. It secretly defends the royal capital.
+    A Mythical Beast with 2 pairs of wings. It has been safeguarding the Royal City in silence.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 2000
 def: 500
 images:
 - index: 1
-  image: WhirlwindPhantomBeastPazuzu-RDKP06-JP-C.png
+  image: FazuzutheKingofMythicalWindBeasts-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP012
@@ -46,9 +46,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717479
