--- a/data/rush/16670.yaml
+++ b/data/rush/16670.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A jack-of-all-trades who'll take on any job, whether it be looking for lost cats to serving as a bodyguard for VIPs. Recently, she's been doing nothing but lunch delivery gigs, but one day, she received a message from an unknown sender.
+    From lost cats to dignitary protection, she's a multifaceted troubleshooter. Lately its been all lunch deliveries, but out of nowhere, she receives a message from an unknown sender.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     rarities:
     - Rare
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715244
