--- a/data/rush/16674.yaml
+++ b/data/rush/16674.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by battle or your opponent's Trap Card effects, also it can make a second attack on a monster during the Battle Phase in which it attacked a monster.
+    This turn, this card cannot be destroyed by battle or your opponent's Trap Card effects. Also, if this card attacked a monster, it can make a second attack on a monster during that Battle Phase.
   de:
   es:
   fr:
@@ -68,7 +68,4 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716875
