--- a/data/rush/16688.yaml
+++ b/data/rush/16688.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards from the top of your Deck to the Graveyard equal to [the number of monsters on your opponent's field].
+    Send cards  equal to [the number of monsters on your opponent's field] from the top of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -60,9 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715266
