--- a/data/rush/16714.yaml
+++ b/data/rush/16714.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards and show them. Then, if there are 2 or more Level 7 monsters among them, gain LP equal to [the number of those Level 7 monsters] x 1500.
+    Draw 3 cards and show them. If 2 or more Level 7 monsters are among them, gain LP equal to [the number of those Level 7 monsters] x 1500.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 712320
