--- a/data/rush/16762.yaml
+++ b/data/rush/16762.yaml
@@ -1,6 +1,6 @@
 konami_id: 16762
 name:
-  en: Ultimate Flag Beast Avan Wolf
+  en: Ultimate Flag Beast Avant Wolf
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A Gear Beast developed for combat. Its majestic form evokes the image of the strongest fight.
+    A Gear Beast designed to live as weaponry. And such doggedness awakens the Ultimate Fighting Bravery.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Ultimate Flag
 images:
 - index: 1
-  image: UltimateFlagBeastAvanWolf-RDGRD2-JP-C.png
+  image: UltimateFlagBeastAvantWolf-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/SBP1-JP002
@@ -56,9 +56,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717295
