--- a/data/rush/17903.yaml
+++ b/data/rush/17903.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 3 Level 4 or lower WATER Attribute monsters from your hand face-up to your field. Then, if you have 3 face-up WATER Attribute monsters on your field, you can draw 1 card.
+    Special Summon up to 3 Level 4 or lower WATER Attribute monsters face-up from your hand to your field. Then, if you have 3 face-up WATER Attribute monsters on your field, you can draw 1 card.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716886
