--- a/data/rush/yugipedia1018688.yaml
+++ b/data/rush/yugipedia1018688.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 右手の盾
-  ja_romaji:
+  ja: <ruby>右<rt>みぎ</rt></ruby><ruby>手<rt>て</rt></ruby>の<ruby>盾<rt>たて</rt></ruby>
+  ja_romaji: Migite no Tate
   ko:
   ko_rr:
   zh-TW:
