--- a/data/rush/yugipedia1018689.yaml
+++ b/data/rush/yugipedia1018689.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 左手の剣
-  ja_romaji:
+  ja: <ruby>左<rt>ひだり</rt></ruby><ruby>手<rt>て</rt></ruby>の<ruby>剣<rt>けん</rt></ruby>
+  ja_romaji: Hidarite no Ken
   ko:
   ko_rr:
   zh-TW:
