--- a/data/rush/yugipedia1018692.yaml
+++ b/data/rush/yugipedia1018692.yaml
@@ -1,13 +1,13 @@
 konami_id:
 name:
-  en: Star's Hand Illuminator
+  en: Star's Hand Roadie
   de:
   es:
   fr:
   it:
   pt:
-  ja: スターズハンド・イルミネーター
-  ja_romaji: Sutāzuhando Iruminētā
+  ja: スターズハンド・ローディー
+  ja_romaji: Sutāzuhando Rōdī
   ko:
   ko_rr:
   zh-TW:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Vi-FRND" face-up on your field, you can look at up to 2 face-down cards on your opponent's field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Prima Guitarna the Shining Superstar" face-up on your field, you can make up to 2 face-up monsters on your field gain 1000 ATK until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -44,10 +44,10 @@ atk: 500
 def: 0
 images:
 - index: 1
-  image: StarsHandIlluminator-RDMRP2-JP-OP.png
+  image: StarsHandRoadie-RDMRP2-JP-OP.png
 sets:
   ja:
-  - set_number: RD/MRP2-JP063
+  - set_number: RD/MRP2-JP064
     set_name: Megaroad Pack 2
     rarities:
     - Common
@@ -56,4 +56,4 @@ is_translation_unofficial:
     en: true
   text:
     en: true
-yugipedia_page_id: 1018691
+yugipedia_page_id: 1018692
