--- a/data/rush/16581.yaml
+++ b/data/rush/16581.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A newly rich Saurus who changed its name from Petite and became absurdly lucky. It used to live in a cave of all things.
+    A now "rich" dinosaur who had changed names in exchange for luck. He used to live in a hole.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714237
