--- a/data/rush/16582.yaml
+++ b/data/rush/16582.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A Pteranodon that loves to collect shiny metals. The shell on its head is its favorite.
+    A pterodactyl that loves to collect shiny objects. The shell atop of its head, is its favorite.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716236
