--- a/data/rush/16590.yaml
+++ b/data/rush/16590.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The cornerstone of the dragon tree that houses the providence of creation. As it breaks the absolute limit, it will push to a new unseen territory.
+    The keystone of the Sky Emperor, bestowed with the providence of all existence. By breaking through its constraints, it is born anew to break new ground.
   de:
   es:
   fr:
@@ -60,7 +60,4 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714435
