--- a/data/rush/16601.yaml
+++ b/data/rush/16601.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The jack of all trades of the band. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
+    The jack of all trades in the band. The gentle melody fills weight in each swing. The top of the head glows when excited.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714302
