--- a/data/rush/16608.yaml
+++ b/data/rush/16608.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 Level 8 or lower Fairy Type monsters from your Graveyard to your hand. You cannot Normal Summon/Set or Special Summon monsters from the hand for the rest of this turn.
+    Add up to 2 Level 8 or lower Fairy Type monsters from your Graveyard to your hand. If you do, you cannot Normal Summon/Set or Special Summon monsters from your hand until the end of this turn.
   de:
   es:
   fr:
@@ -62,9 +62,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717153
