--- a/data/rush/16610.yaml
+++ b/data/rush/16610.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A follower of the gods that dine in the Divine Sushi Realm. All of the rice is swept over by their characteristic seaweed and peculiar aroma.
+    A crony of the divine beings from the Celestial Sushi Dimension. With wit and aromatic paddy-feels, decrees for rice rolls-off the tongue.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716788
