--- a/data/rush/16576.yaml
+++ b/data/rush/16576.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your LP are lower than your opponent's, place 1 card from your hand on the bottom of the Deck.
+    If your LP are lower than your opponent's, place 1 card from your hand on the bottom of your Deck.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of each player's Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
+    Each player sends the top 2 cards of their Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716743
