--- a/data/rush/16579.yaml
+++ b/data/rush/16579.yaml
@@ -1,6 +1,6 @@
 konami_id: 16579
 name:
-  en: Terrorsaur Sternptera
+  en: Supressaurus Sternptera
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from your opponent's hand on the bottom of the Deck.
+    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from the opponent's hand on the bottom of their Deck.
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 500
 def: 1200
 images:
 - index: 1
-  image: TerrorsaurSternptera-RDMAX2-JP-C.png
+  image: SupressaurusSternptera-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP011
@@ -60,9 +60,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717036
