--- a/data/rush/16597.yaml
+++ b/data/rush/16597.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A Constructor Dragon whose entire body is armed with special tools and equipment. It is said it has enough power to demolish any major location in an instant.
+    A Constructor Wyrm enveloped in specialized construction gear. It is said that no matter the size of the project, the wyrm could demolish the site in one blow.
   de:
   es:
   fr:
@@ -56,7 +56,4 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714325
