--- a/data/rush/16607.yaml
+++ b/data/rush/16607.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn this card was Normal Summoned, place 1 Fairy Type monster from your Graveyard on the bottom of the Deck.
+    During the turn you Normal Summoned this card, place 1 Fairy Type monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. This turn, your Level 6 or lower monsters cannot attack.
+    Draw 1 card. Your Level 6 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714648
