--- a/data/rush/16612.yaml
+++ b/data/rush/16612.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up Fairy Type monster on your field.
+    You have a face-up Fairy Type monster on your field.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 Spell/Trap Card on your opponent's field on the bottom of the owner's Deck.
+    Place 1 Spell/Trap Card from your opponent's field on the bottom of the owner's Deck.
   de:
   es:
   fr:
@@ -56,9 +56,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 712911
