--- a/data/rush/17689.yaml
+++ b/data/rush/17689.yaml
@@ -1,6 +1,6 @@
 konami_id: 17689
 name:
-  en: Shoulder Phone Nyan Nyan
+  en: Brick Phone Nyan Nyan
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: ShoulderPhoneNyanNyan-RDMRP1-JP-UR.png
+  image: BrickPhoneNyanNyan-RDMRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP053
@@ -64,9 +64,4 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716692
