--- a/rush.yaml
+++ b/rush.yaml
@@ -33743,7 +33743,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your LP are lower than your opponent's, place 1 card from your hand on the bottom of the Deck.
+    If your LP are lower than your opponent's, place 1 card from your hand on the bottom of your Deck.
   de:
   es:
   fr:
@@ -33757,7 +33757,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of each player's Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
+    Each player sends the top 2 cards of their Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
   de:
   es:
   fr:
@@ -33791,9 +33791,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716743
 ---
 konami_id: 16577
@@ -33858,11 +33855,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715840
 ---
 konami_id: 16578
@@ -33936,7 +33928,7 @@ yugipedia_page_id: 716485
 ---
 konami_id: 16579
 name:
-  en: Terrorsaur Sternptera
+  en: Supressaurus Sternptera
   de:
   es:
   fr:
@@ -33964,7 +33956,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from your opponent's hand on the bottom of the Deck.
+    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from the opponent's hand on the bottom of their Deck.
   de:
   es:
   fr:
@@ -33984,7 +33976,7 @@ atk: 500
 def: 1200
 images:
 - index: 1
-  image: TerrorsaurSternptera-RDMAX2-JP-C.png
+  image: SupressaurusSternptera-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP011
@@ -33996,11 +33988,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717036
 ---
 konami_id: 16580
@@ -34073,7 +34060,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A newly rich Saurus who changed its name from Petite and became absurdly lucky. It used to live in a cave of all things.
+    A now "rich" dinosaur who had changed names in exchange for luck. He used to live in a hole.
   de:
   es:
   fr:
@@ -34107,9 +34094,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714237
 ---
 konami_id: 16582
@@ -34128,7 +34112,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A Pteranodon that loves to collect shiny metals. The shell on its head is its favorite.
+    A pterodactyl that loves to collect shiny objects. The shell atop of its head, is its favorite.
   de:
   es:
   fr:
@@ -34162,9 +34146,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716236
 ---
 konami_id: 16583
@@ -34633,7 +34614,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The cornerstone of the dragon tree that houses the providence of creation. As it breaks the absolute limit, it will push to a new unseen territory.
+    The keystone of the Sky Emperor, bestowed with the providence of all existence. By breaking through its constraints, it is born anew to break new ground.
   de:
   es:
   fr:
@@ -34679,9 +34660,6 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714435
 ---
 konami_id: 16591
@@ -35102,7 +35080,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A Constructor Dragon whose entire body is armed with special tools and equipment. It is said it has enough power to demolish any major location in an instant.
+    A Constructor Wyrm enveloped in specialized construction gear. It is said that no matter the size of the project, the wyrm could demolish the site in one blow.
   de:
   es:
   fr:
@@ -35144,9 +35122,6 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714325
 ---
 konami_id: 16598
@@ -35384,7 +35359,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The jack of all trades of the band. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
+    The jack of all trades in the band. The gentle melody fills weight in each swing. The top of the head glows when excited.
   de:
   es:
   fr:
@@ -35426,9 +35401,6 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714302
 ---
 konami_id: 16602
@@ -35503,9 +35475,6 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715333
 ---
 konami_id: 16603
@@ -35641,9 +35610,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715967
 ---
 konami_id: 16605
@@ -35802,7 +35768,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn this card was Normal Summoned, place 1 Fairy Type monster from your Graveyard on the bottom of the Deck.
+    During the turn you Normal Summoned this card, place 1 Fairy Type monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -35816,7 +35782,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. This turn, your Level 6 or lower monsters cannot attack.
+    Draw 1 card. Your Level 6 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -35850,9 +35816,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714648
 ---
 konami_id: 16608
@@ -35885,7 +35848,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 Level 8 or lower Fairy Type monsters from your Graveyard to your hand. You cannot Normal Summon/Set or Special Summon monsters from the hand for the rest of this turn.
+    Add up to 2 Level 8 or lower Fairy Type monsters from your Graveyard to your hand. If you do, you cannot Normal Summon/Set or Special Summon monsters from your hand until the end of this turn.
   de:
   es:
   fr:
@@ -35919,11 +35882,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717153
 ---
 konami_id: 16609
@@ -35942,7 +35900,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A follower of the gods that dine in the Divine Sushi Realm. All of the rice is swept up by their characteristic seaweed and peculiar sweetness.
+    A crony of the divine beings from the Celestial Sushi Dimension. With wit and sweet paddy-feels, decrees for rice rolls-off the tongue.
   de:
   es:
   fr:
@@ -35976,9 +35934,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715938
 ---
 konami_id: 16610
@@ -35997,7 +35952,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A follower of the gods that dine in the Divine Sushi Realm. All of the rice is swept over by their characteristic seaweed and peculiar aroma.
+    A crony of the divine beings from the Celestial Sushi Dimension. With wit and aromatic paddy-feels, decrees for rice rolls-off the tongue.
   de:
   es:
   fr:
@@ -36031,9 +35986,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716788
 ---
 konami_id: 16611
@@ -36115,7 +36067,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up Fairy Type monster on your field.
+    You have a face-up Fairy Type monster on your field.
   de:
   es:
   fr:
@@ -36129,7 +36081,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 Spell/Trap Card on your opponent's field on the bottom of the owner's Deck.
+    Place 1 Spell/Trap Card from your opponent's field on the bottom of the owner's Deck.
   de:
   es:
   fr:
@@ -36157,11 +36109,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 712911
 ---
 konami_id: 16613
@@ -36222,9 +36169,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716505
 ---
 konami_id: 16614
@@ -62169,7 +62113,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has 3 monsters on their field, shuffle 3 EARTH Attribute Machine Type monsters from your Graveyard into the Deck.
+    If your opponent has 3 cards on their field, shuffle 3 EARTH Attribute Machine Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -62183,7 +62127,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 EARTH Attribute Machine Type monster from your hand face-up to your field. This turn, your Level 6 or lower monsters cannot attack.
+    Special Summon 1 EARTH Attribute Machine Type monster from your hand face-up to your field. Your Level 6 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -62223,11 +62167,6 @@ sets:
     set_name: Strongest Battle Deck Yuhi - Join and Explode! Join and Intensify!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716375
 ---
 konami_id: 17514
@@ -69502,7 +69441,7 @@ yugipedia_page_id: 714542
 ---
 konami_id: 17689
 name:
-  en: Shoulder Phone Nyan Nyan
+  en: Brick Phone Nyan Nyan
   de:
   es:
   fr:
@@ -69552,7 +69491,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: ShoulderPhoneNyanNyan-RDMRP1-JP-UR.png
+  image: BrickPhoneNyanNyan-RDMRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP053
@@ -69566,16 +69505,11 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716692
 ---
 konami_id: 17690
 name:
-  en: High-Heel Priestess
+  en: Fashion of Faith
   de:
   es:
   fr:
@@ -69589,7 +69523,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have a face-up Level 7 or higher Aqua Type monster on your field.
+    You Normal Summoned this card this turn and you have a face-up Level 7 or higher Aqua Type monster on your field.
   de:
   es:
   fr:
@@ -69625,7 +69559,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: HighHeelPriestess-RDMRP1-JP-SR.png
+  image: FashionofFaith-RDMRP1-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP054
@@ -69637,11 +69571,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715324
 ---
 konami_id: 17691
