--- a/data/rush/16311.yaml
+++ b/data/rush/16311.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A fierce mermaid that torments the damned who fell to hell. She has a great reputation of making recidivists beg "I will never do anything bad again, please forgive me".
+    An aggressive mermaid who disciplines those sent to the abyss. Frequent repeaters have sent positive reviews for forgiveness.
   de:
   es:
   fr:
@@ -46,7 +46,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715211
