--- a/data/rush/16312.yaml
+++ b/data/rush/16312.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A lady warrior whose main battlefield is a prison island. Armed with sword and shield, she rebukes harshly. She has a great reputation of bringing recidivists back to their senses.
+    A female warrior who occupies a prison island as her primary battling grounds. She scolds with sword and shield in hand. Frequent repeaters have sent positive reviews of their awakening.
   de:
   es:
   fr:
@@ -54,7 +54,4 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715497
