--- a/data/rush/16313.yaml
+++ b/data/rush/16313.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A group of grass ninjas who protect their lord from crises, while concealed in the shadow. Even if they are struck down, they strike back from the shadows of blades of grass.
+    Lurking in the shadows to save its master of the grass clan from danger. Even after its defeat, it will return from behind the grassy knoll.
   de:
   es:
   fr:
@@ -48,7 +48,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715548
