--- a/data/rush/16315.yaml
+++ b/data/rush/16315.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A bird that drops bombs. There may be a tiny person inside.
+    A bird that releases bombs. There may be little people inside.
   de:
   es:
   fr:
@@ -54,7 +54,4 @@ sets:
     set_name: Strongest Battle Deck Asana - Pride of the Heavy Cavalry Style
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 709554
