--- a/data/rush/16333.yaml
+++ b/data/rush/16333.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. Then, if you changed a monster to face-up Attack Position by this effect, gain LP equal to [that monster's original ATK].
+    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. If you changed a monster to face-up Attack Position by this effect, gain LP equal to [that monster's original ATK].
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 712444
