--- a/data/rush/16342.yaml
+++ b/data/rush/16342.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Psychic Type monster from your Graveyard to your field in face-up Attack Position.
+    Special Summon 1 Level 7 Psychic Type monster from your Graveyard in face-up Attack Position to your field.
   de:
   es:
   fr:
@@ -60,9 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715732
