--- a/data/rush/16307.yaml
+++ b/data/rush/16307.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total number of face-up Dragon Type monsters on your opponent's field and the number of Dragon Type monsters in your opponent's Graveyard] x 500.
+    This card gains ATK equal to [the total number of face-up Dragon Type monsters on your opponent's field and in their Graveyard] x 500.
   de:
   es:
   fr:
@@ -78,7 +78,4 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714193
