--- a/data/rush/16308.yaml
+++ b/data/rush/16308.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A very beautiful dragon covered with FIRE. It does not like fights, but has incredibly high attack power.
+    An exquisite dragon covered in fire. It does not like fights, but still has incredibly high attack power.
   de:
   es:
   fr:
@@ -58,7 +58,4 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717069
