--- a/data/rush/16317.yaml
+++ b/data/rush/16317.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An electric lifeform that appears with lightning strikes. It can transform itself into an electric current that invades circuitry, causing machinery to fail.
+    Materializes alongside a flash of lightening. This electric creature can zap through machinery to short-circuit their being.
   de:
   es:
   fr:
@@ -54,9 +54,4 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716942
