--- a/data/rush/16318.yaml
+++ b/data/rush/16318.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A surprisingly hot plant-warrior that attacks with seeds and sword.
+    A plant-warrior that attacks with seeds and sword. Surprisingly baked.
   de:
   es:
   fr:
@@ -46,9 +46,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713427
