--- a/data/rush/16335.yaml
+++ b/data/rush/16335.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 Plant Type monster from your hand to the Graveyard. Then, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase. This turn, this card cannot attack directly.
+    Send 1 Plant Type monster from your hand to the Graveyard. If you do, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase. This card cannot attack directly this turn.
   de:
   es:
   fr:
@@ -66,7 +66,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714820
