--- a/data/rush/16339.yaml
+++ b/data/rush/16339.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 2 Spell/Trap Cards in your hand.
+    Reveal 2 Spell/Trap Cards in your hand to your opponent.
   de:
   es:
   fr:
@@ -60,7 +60,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713928
