--- a/data/rush/16346.yaml
+++ b/data/rush/16346.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 2 Psychic Type monsters from your Graveyard on the bottom of the Deck in any order.
+    Place 2 Psychic Type monsters from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Psychic Type Normal Monster from your Graveyard to your hand. Then, if you added "CAN:D" to your hand by this effect, gain 1000 LP.
+    Add 1 Psychic Type Normal Monster from your Graveyard to your hand. If you added "CAN:D" to your hand by this effect, gain 1000 LP.
   de:
   es:
   fr:
@@ -63,7 +63,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715451
