--- a/data/rush/16353.yaml
+++ b/data/rush/16353.yaml
@@ -1,6 +1,6 @@
 konami_id: 16353
 name:
-  en: Moisturize
+  en: Hydration
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: Moisturize-RDMRP1-JP-C.png
+  image: Hydration-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP047
@@ -66,9 +66,4 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715934
