--- a/data/rush/16358.yaml
+++ b/data/rush/16358.yaml
@@ -1,6 +1,6 @@
 konami_id: 16358
 name:
-  en: Avian Spell Strategy
+  en: Avian Spell Tactics
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Warrior and/or Winged Beast Type monsters on your field.
+    You have 2 or more face-up Warrior Type and/or Winged Beast Type monsters on your field.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can place 1 Level 8 or lower Warrior or Winged Beast Type monster from your Graveyard on top of the Deck.
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can place 1 Level 8 or lower Warrior Type or Winged Beast Type monster from your Graveyard on top of your Deck.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: AvianSpellStrategy-RDTB01-JP-C.png
+  image: AvianSpellTactics-RDTB01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP053
@@ -64,9 +64,4 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713346
