--- a/data/rush/yugipedia1018683.yaml
+++ b/data/rush/yugipedia1018683.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７／光属性／鳥獣族）１体を選び、自分フィールドに表側表示で特殊召喚する。その後、相手フィールドの表側表示モンスターを３体まで選んでその属性をターン終了時まで光属性にできる。
   ko:
   zh-TW:
   zh-CN:
