--- a/data/rush/yugipedia1018684.yaml
+++ b/data/rush/yugipedia1018684.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７／光属性／鳥獣族）がいる場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,10 +33,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上で、自分フィールドに表側表示の「ライトニング・ボルコンドル」がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Draw 1 card.
@@ -44,7 +49,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
