--- a/data/rush/yugipedia1018685.yaml
+++ b/data/rush/yugipedia1018685.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（光属性／鳥獣族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。この効果の条件でモンスター（レベル７）を墓地へ送った場合、さらに自分のデッキの上からカード３枚を墓地へ送る事ができる。
   ko:
   zh-TW:
   zh-CN:
