--- a/data/rush/yugipedia1018686.yaml
+++ b/data/rush/yugipedia1018686.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（光属性）１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、モンスター（光属性／鳥獣族）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。さらに、自分の墓地の「ライトニング・ボルコンドル」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
