--- a/data/rush/yugipedia1018688.yaml
+++ b/data/rush/yugipedia1018688.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「右手に盾を左手に剣を」「左手に剣を右手に盾を」を合計２枚まで選んで自分の魔法＆罠ゾーンにセットする。この効果で「右手に盾を左手に剣を」を選んだ場合、さらに相手フィールドのモンスターを３体まで選んで表示形式を変更できる。
   ko:
   zh-TW:
   zh-CN:
