--- a/data/rush/yugipedia1018690.yaml
+++ b/data/rush/yugipedia1018690.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル２／サイキック族／攻撃力５００／守備力０）１体を選び、自分フィールドに表側表示で特殊召喚する。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
