--- a/data/rush/yugipedia1018691.yaml
+++ b/data/rush/yugipedia1018691.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「Ｖｉ－ＦＲＮＤ」がいる場合、さらに相手フィールドの裏側表示のカードを２枚まで選んで確認できる。
   ko:
   zh-TW:
   zh-CN:
