--- a/data/rush/yugipedia1018692.yaml
+++ b/data/rush/yugipedia1018692.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「彩光のプリマギターナ」がいる場合、さらに自分フィールドの表側表示モンスターを２体まで選んでその攻撃力を次の相手ターン終了時まで１０００アップできる。
   ko:
   zh-TW:
   zh-CN:
